Added github strategy with no database.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"pug": "^0.1.0",
 		"passport": "^0.3.2",
 		"express-session": "^1.15.0",
-		"passport-local": "^1.0.0"
+		"passport-local": "^1.0.0",
+		"passport-github": "^1.1.0"
 	},
 	"engines": {
 		"node": "4.4.3"
